<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.SevenDigITs.Solutions.E_Learning.Signin_Signup.SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.SevenDigITs.Solutions.E_Learning.Signin_Signup.SignUpActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/its_logo"
                android:contentDescription="@string/todo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textColor="@color/darkblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <EditText
                android:id="@+id/email_edit_textReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <EditText
                android:id="@+id/password_edit_textReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <EditText
                android:id="@+id/repassword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <EditText
                android:id="@+id/university_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/university_optional"
                android:inputType="text"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <EditText
                android:id="@+id/major_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/major"
                android:inputType="text"
                android:padding="20dp"
                android:singleLine="true"
                android:textColorHint="@color/lightgray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/age_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColorHint="@color/lightgray" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/RegButtonReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightgray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/gray"
                android:textSize="17sp" />

            <Button
                android:id="@+id/login_buttonReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/lightblue"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>